--- a/delterFront.html
+++ b/delterFront.html
@@ -17,10 +17,10 @@
 </head>
 
 <body>
-  <div id="wrapper">
+  <!-- <div id="wrapper">
     <div id="loading">
       <div id="loadingCircle" class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"></div>
-    </div>
+    </div> -->
     <div class="demo-layout">
       <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
                   mdl-layout--fixed-header">
@@ -39,7 +39,7 @@
         <div class="mdl-layout__drawer" id="popup">
           <span class="mdl-layout-title">メニュー</span>
           <nav class="mdl-navigation">
-            <button type="button" id="facebook"
+            <!-- <button type="button" id="facebook"
                     class="mainBtn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
               <img src="images/facebook.png"><p>ログイン</p>
             </button>
@@ -50,22 +50,50 @@
             <button type="button" id="twitter"
                     class="mainBtn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
               <img src="images/twitter.png"><p>ログイン</p>
-            </button>
-            <br>
-            <br>
-            <p id="sliderTag">フォローユーザーからの情報</p>
-            <input class="mdl-slider mdl-js-slider" type="range"  min="0" max="100" value="0" tabindex="0"/>
-            <p id="sliderTag">トレンドからの情報</p>
-            <input class="mdl-slider mdl-js-slider" type="range"  min="0" max="100" value="0" tabindex="0"/>
-            <p id="sliderTag">興味あるカテゴリからの情報</p>
-            <input class="mdl-slider mdl-js-slider" type="range"  min="0" max="100" value="0" tabindex="0"/>
-          </nav>
+            </button> -->
+              <button type="button" id="twitter"
+                      class="mainBtn">
+                <img src="images/twitter.png">
+              </button>
+              <br>
+              <br>
+              <p id="sliderTag">フォローユーザーからの情報</p>
+              <input class="mdl-slider mdl-js-slider" type="range"  min="0" max="100" value="0" tabindex="0"/>
+              <p id="sliderTag">トレンドからの情報</p>
+              <input class="mdl-slider mdl-js-slider" type="range"  min="0" max="100" value="0" tabindex="0"/>
+              <p id="sliderTag">興味あるカテゴリからの情報</p>
+              <input class="mdl-slider mdl-js-slider" type="range"  min="0" max="100" value="0" tabindex="0"/>
+              <div class="mdl-textfield mdl-js-textfield textfield">
+                <input class="mdl-textfield__input" type="text" id="sample1" />
+                <label class="mdl-textfield__label" for="sample1">興味のあるカテゴリ</label>
+              </div>
+            </nav>
+          </div>
+          <main class="mdl-layout__content mdl-shadow--2dp">
+            <div class="page-content">
+              <div id="welcome_card">
+                <div class="mdl-card__title">
+                  <h2 class="mdl-card__title-text">Welcome to Delter!</h2>
+                </div>
+
+                <div class="mdl-card__supporting-text">
+                  メニューからアカウントにログインしてください
+                </div>
+              </div>
+
+              <div id="welcome_card">
+                <div class="mdl-card__title">
+                  <h2 class="mdl-card__title-text">Welcome to Delter!</h2>
+                </div>
+
+                <div class="mdl-card__supporting-text">
+                  メニューからアカウントにログインしてください
+                </div>
+              </div>
+            </div>
+          </main>
         </div>
-        <main class="mdl-layout__content">
-          <div class="page-content"><!-- Your content goes here --></div>
-        </main>
       </div>
-    </div>
-  </body>
-</div>
+    <!-- </div> -->
+</body>
 </html>
