--- a/delterFront.html
+++ b/delterFront.html
@@ -69,9 +69,10 @@
               </div>
             </nav>
           </div>
-          <main class="mdl-layout__content mdl-shadow--2dp">
+          <!-- <main class="mdl-layout__content mdl-shadow--2dp"> -->
+          <main class="mdl-card demo-card-wide">
             <div class="page-content">
-              <div id="welcome_card">
+              <div class="mdl-shadow--2dp " id="welcome_card">
                 <div class="mdl-card__title">
                   <h2 class="mdl-card__title-text">Welcome to Delter!</h2>
                 </div>
@@ -80,17 +81,14 @@
                   メニューからアカウントにログインしてください
                 </div>
               </div>
-
-              <div id="welcome_card">
-                <div class="mdl-card__title">
-                  <h2 class="mdl-card__title-text">Welcome to Delter!</h2>
-                </div>
-
-                <div class="mdl-card__supporting-text">
-                  メニューからアカウントにログインしてください
-                </div>
+              <div class="mdl-shadow--2dp" id="tweets">
+                <!-- <img id="icon" alt="icon image"
+                src="https://pbs.twimg.com/profile_images/717259359814754304/0Sb2mpYV.jpg">
+                aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+-->
               </div>
             </div>
+
           </main>
         </div>
       </div>
