--- a/delterFront.html
+++ b/delterFront.html
@@ -17,10 +17,7 @@
 </head>
 
 <body>
-  <!-- <div id="wrapper">
-    <div id="loading">
-      <div id="loadingCircle" class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"></div>
-    </div> -->
+  <div id="wrapper">
     <div class="demo-layout">
       <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
                   mdl-layout--fixed-header">
@@ -73,25 +70,37 @@
           <main class="mdl-card demo-card-wide">
             <div class="page-content">
               <div class="mdl-shadow--2dp " id="welcome_card">
-                <div class="mdl-card__title">
+                <h2>Welcome to Delter!</h2>
+                <h6>メニューからアカウントにログインしてください</h6>
+                <!-- <div class="mdl-card__title">
                   <h2 class="mdl-card__title-text">Welcome to Delter!</h2>
                 </div>
 
                 <div class="mdl-card__supporting-text">
                   メニューからアカウントにログインしてください
-                </div>
+                </div> -->
               </div>
               <div class="mdl-shadow--2dp" id="tweets">
-                <!-- <img id="icon" alt="icon image"
+                <img id="icon" alt="icon image"
                 src="https://pbs.twimg.com/profile_images/717259359814754304/0Sb2mpYV.jpg">
-                aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
--->
+                <h6>ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</h6>
+
+              </div>
+
+              <div class="mdl-shadow--2dp" id="tweets">
+                <img id="icon" alt="icon image"
+                src="https://pbs.twimg.com/profile_images/717259359814754304/0Sb2mpYV.jpg">
+                <h6>ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</h6>
+
               </div>
             </div>
 
           </main>
         </div>
       </div>
-    <!-- </div> -->
+    </div>
+    <div id="loading">
+      <div id="loadingCircle" class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"></div>
+    </div>
 </body>
 </html>
